--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,3 +1,10 @@
+.carousel-inner > .carousel-item {
+  height: 500px;
+}
 
+img {
+  width: 500;
+  height: 500;
+}
 
 /*# sourceMappingURL=styles.css.map */
