added module, added flare to text, added color to page

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,10 +1,49 @@
+body {
+  height: 1000px;
+  background-color: #b0f7f3;
+}
+
 .carousel-inner > .carousel-item {
   height: 500px;
 }
 
 img {
-  width: 500;
-  height: 500;
+  max-width: 80%;
+  height: 100%;
+}
+
+.dogcard {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card-body {
+  background-color: lightblue;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+.target-text {
+  color: black;
+  font-weight: bold;
+  font-family: "Lucida Console", Monaco, monospace;
+}
+
+.tempcolor {
+  color: black;
+}
+
+.markstyle {
+  border-radius: 15px;
 }
 
 /*# sourceMappingURL=styles.css.map */
